--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,14 @@
        tools:listitem="@layout/shop_list_enable"
        />
 
+   <com.google.android.material.floatingactionbutton.FloatingActionButton
+       android:id="@+id/addBtn"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       android:layout_margin="20dp"
+       android:foreground="@drawable/ic_launcher_foreground"
+       />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
